--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "audibert",
   "version": "1.0.0",
+  "description": "Effortlessly access all your Discord data through a powerful API with just one click.",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node api/index.js"
+    "start": "node src/app.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
     "discord.js": "^14.0.0",
-    "dotenv": "^10.0.0",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.1",
     "node-fetch": "^2.6.1"
-  }
+  },
+  "author": "Matheus Audibert",
+  "license": "MIT"
 }
