--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node src/app.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "discord.js": "^14.0.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
