--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Effortlessly access all your Discord data through a powerful API with just one click.",
   "main": "src/app.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node --no-warnings src/app.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -13,6 +13,6 @@
     "express": "^4.17.1",
     "node-fetch": "^2.6.1"
   },
-  "author": "Matheus Audibert",
+  "author": "audibert",
   "license": "MIT"
 }
