--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "Effortlessly access all your Discord data through a powerful API with just one click.",
   "main": "src/app.js",
   "scripts": {
-    "start": "node --no-warnings src/app.js"
+    "start": "node src/app.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "discord.js": "^14.0.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "whatwg-url": "^14.1.0"
   },
   "author": "audibert",
   "license": "MIT"
