--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Effortlessly access all your Discord data through a powerful API with just one click.",
   "main": "src/app.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "cors": "^2.8.5",
