--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Effortlessly access all your Discord data through a powerful API with just one click.",
   "main": "src/app.js",
   "scripts": {
-    "build": "pip install pillow",
+    "build": "pip install pillow requests numpy",
     "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
