--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Effortlessly access all your Discord data through a powerful API with just one click.",
   "main": "src/app.js",
   "scripts": {
-    "build": "echo 'No build step required'",
     "start": "node src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "vercel-build": "echo 'Built successfully'",
+    "dev": "vercel dev"
   },
   "dependencies": {
     "cors": "^2.8.5",
