--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "audibert",
   "version": "1.0.0",
   "description": "Effortlessly access all your Discord data through a powerful API with just one click.",
-  "main": "src/app.js",
+  "main": "src/api/index.js",
   "scripts": {
-    "start": "node src/app.js",
+    "start": "node src/api/index.js",
     "vercel-build": "echo 'Built successfully'",
     "dev": "vercel dev"
   },
