--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Effortlessly access all your Discord data through a powerful API with just one click.",
   "main": "src/api/index.js",
   "scripts": {
-    "start": "node src/api/index.js",
-    "vercel-build": "echo 'Built successfully'"
+    "start": "node src/api/index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
