--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "audibert",
   "version": "1.0.0",
-  "description": "Effortlessly access all your Discord data through a powerful API with just one click.",
+  "description": "INSCREVA-SE NO CANAL DO AUDIBERT",
   "main": "src/api/index.js",
   "scripts": {
     "start": "node src/api/index.js"
