--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "discord.js": "^14.0.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
+    "memory-cache": "^0.2.0",
+    "mongodb": "^6.17.0",
     "node-fetch": "^2.6.1",
     "whatwg-url": "^14.1.0"
   },
