--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node src/api/index.js"
   },
   "dependencies": {
+    "apicache": "^1.6.3",
     "cors": "^2.8.5",
     "discord.js": "^14.0.0",
     "dotenv": "^16.0.0",
